Update example docker compose with logging

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -24,3 +24,4 @@ services:
       # DNSMASQ_OPTS: ''
       # Tip: use this to get rid of https-warnings in the logs
       #PYTHONWARNINGS: 'ignore:Unverified HTTPS request'
+      #LOG_LEVEL: INFO
